--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Cachorros</title>
+</head>
+<body>
+    <header>
+    <h1></h1>
+ </header>
+  <section>
 
+  </section>
+  <section>
+    <div class="ca">
+<img src="" alt="">
+    </div>
+  </section>
+</body>
+</html>
